<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LogIn"
        android:id = "@+id/ly_login">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_ucolo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/poppins600"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInput_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:hintEnabled="false"
            app:counterTextColor="@color/white"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            app:boxStrokeColor="@color/green1"
            app:boxStrokeWidthFocused="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTxtEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/et_form"
                android:layout_marginTop="36dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black_bg"
                android:textColorHint="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/txtVLogin" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInput_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/txtInput_Email"
            app:boxStrokeColor="@color/green1"
            app:boxStrokeWidthFocused="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTxtPassword"
                android:hint="@string/password"
                android:textColorHint="@color/grey"
                android:textColor="@color/black_bg"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_form"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:padding="12dp"
                android:drawablePadding="12dp"
                app:layout_constraintHorizontal_bias="0.5">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/btn_main"
            android:text="@string/login"
            android:textColor="@color/black_bg"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins500"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInput_Password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>